I9 Fixes button getting cutoff

--- a/style.scss
+++ b/style.scss
@@ -561,21 +561,7 @@ main {
         margin-bottom: 50px;
     }
 
-    .booking-step-1,
-    .booking-step-2,
-    .booking-step-3 {
-        max-height: 0;
-        height: 100%;
-        transition: max-height 0.5s ease-in, clip-path 0.5s ease-in;
-        overflow: hidden;
-        clip-path: polygon(0 0, 0 0, 0 0);
-        padding-top: 20px;
-
-        &.active {
-            max-height: 3999px;
-            clip-path: polygon(0 0, 250% 0, 0 250%);
-        }
-
+    .booking-step-1 {
         .step-instructions {
             display: block;
             font-size: 18px;
@@ -586,22 +572,11 @@ main {
     }
 }
 
-.booking-container {
-    max-height: 0;
-    transition: max-height 0.4s ease-out;
-    overflow: hidden;
-    box-sizing: border-box;
-
-    &.active {
-        max-height: 4000px;
-        padding: 200px 0;
-    }
-}
-
 .booking-step-1 {
     input.datepicker {
         max-width: 400px;
         margin: 50px;
+        box-sizing: border-box;
     }
 
     @media (max-width: 900px) {
@@ -619,187 +594,6 @@ main {
         .drp-selected {
             display: none;
         }
-    }
-}
-
-.booking-step-2 {
-    .van-list {
-        list-style: none;
-        display: flex;
-        flex-wrap: wrap;
-        width: 100%;
-        overflow: hidden;
-        justify-content: center;
-
-        .van {
-            display: none;
-            position: relative;
-            min-width: 300px;
-            max-width: 500px;
-            width: 100%;
-            height: 450px;
-            margin: 30px;
-            border-radius: $default-border-radius;
-            overflow: hidden;
-            cursor: pointer;
-            filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.25));
-            transition: box-shadow 0.4s ease-out;
-
-            .van-image {
-                z-index: 1;
-                position: relative;
-                height: 100%;
-
-                img {
-                    height: 100%;
-                    width: 100%;
-                    object-fit: cover;
-                    object-position: 50% 50%;
-                    border-radius: 4px;
-                    border-bottom-left-radius: 0;
-                    border-bottom-right-radius: 0;
-                }
-            }
-
-            .description {
-                position: absolute;
-                bottom: 0;
-                text-align: left;
-                padding: 15px 25px;
-                margin-top: -35px;
-                background-color: $turquoise;
-                border-top-left-radius: $default-border-radius;
-                border-bottom-right-radius: 4px;
-                border-bottom-left-radius: 4px;
-                z-index: 2;
-
-                .van-name {
-                    color: whitesmoke;
-                    padding: 10px 0;
-                    margin: 10px 0;
-                    position: relative;
-
-                    &::after {
-                        position: absolute;
-                        bottom: 0;
-                        left: 0;
-                        content: '';
-                        height: 1px;
-                        width: 100%;
-                        max-width: 0;
-                        transition: max-width 1s ease-out;
-                        border-radius: 2px;
-                        background-color: white;
-                    }
-                }
-
-                .van-description {
-                    overflow: hidden;
-                    max-height: 0;
-                    transition: max-height 0.6s ease-out;
-                    color: whitesmoke;
-
-                }
-            }
-
-            &:hover {
-                box-shadow: 0px 0px 15px 5px rgba(46, 196, 182, 0.4);
-
-                .description {
-                    .van-name::after {
-                        max-width: 300px;
-                    }
-
-                    .van-description {
-                        max-height: 400px;
-                    }
-                }
-            }
-        }
-    }
-}
-
-.booking-step-3 {
-    margin-top: 100px;
-
-    form {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    input {
-        max-width: 400px;
-        box-sizing: border-box;
-    }
-
-    .booking-form-radio {
-        max-width: 400px;
-        width: 100%;
-        padding-bottom: 20px;
-
-        p {
-            padding: 10px 0;
-        }
-
-        .radio-wrapper {
-            text-align: left;
-
-            label {
-                padding-left: 15px;
-            }
-
-            input {
-                margin: 20px 0;
-            }
-        }
-    }
-
-    .total-price {
-        font-size: 22px;
-        padding: 20px;
-    }
-
-    #email,
-    #phone {
-        max-width: 0;
-        max-height: 0;
-        padding: 0;
-        transition: max-width 0.2s ease-out;
-
-        &.active {
-            max-width: 400px;
-            max-height: 200px;
-            padding: 12px 20px;
-            width: 100%;
-        }
-    }
-
-    button {
-        margin-top: 30px;
-    }
-}
-
-.booking-confirmation {
-    max-height: 0;
-    transition: max-height 0.4s ease-out;
-    overflow: hidden;
-
-    &.active {
-        max-height: 600px;
-        padding: 100px;
-    }
-
-    img {
-        width: 200px;
-    }
-
-    h4 {
-        font-size: 34px;
-        max-width: 650px;
-        margin: auto;
-        padding-bottom: 70px;
     }
 }
 
